--- a/shlok.html
+++ b/shlok.html
@@ -4,7 +4,10 @@
 	<title>shlok</title>
 </head>
 <body>
-	first page
+	<p>first page</p>
+	<h2> After such a long time I have here, to let you know that I have learned some new tricks in HTML. Will try to update this page and make it as professional as possible.</h2>
+	
+	<h4> Come on, use some css and js to make this page stand out of usual!!!</h4>
 
 </body>
 </html>
